<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/UserCellLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00FF4444"
    android:minHeight="100dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/NameInList"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/contactName"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/AvatarInList"
        app:layout_constraintTop_toTopOf="@+id/AvatarInList" />

    <TextView
        android:id="@+id/PhoneInList"
        android:layout_width="290dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:text="@string/tel"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/AvatarInList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toEndOf="@+id/AvatarInList"
        app:layout_constraintTop_toBottomOf="@+id/AddressInList" />

    <TextView
        android:id="@+id/AddressInList"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/AddressContact"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/PhoneInList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/AvatarInList"
        app:layout_constraintTop_toBottomOf="@+id/NameInList" />

    <ImageView
        android:id="@+id/AvatarInList"
        android:layout_width="83dp"
        android:layout_height="72dp"
        android:contentDescription="@string/IMGDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[11]" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>