<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ISEN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/IMGDesc"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/isen_logo" />

            <ImageButton
                android:id="@+id/cycleBTN"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/IMGDesc"
                android:paddingLeft="7dp"
                android:paddingTop="7dp"
                android:paddingRight="7dp"
                android:paddingBottom="7dp"
                android:scaleType="fitCenter"
                android:tint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/permissionBTN"
                app:layout_constraintHorizontal_bias="0.33"
                app:layout_constraintStart_toStartOf="@+id/permissionBTN"
                app:layout_constraintTop_toBottomOf="@+id/ISEN"
                app:srcCompat="@drawable/reload" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_lifeCylce"
                app:layout_constraintEnd_toEndOf="@+id/cycleBTN"
                app:layout_constraintStart_toStartOf="@+id/cycleBTN"
                app:layout_constraintTop_toBottomOf="@+id/cycleBTN" />

            <ImageButton
                android:id="@+id/saveBTN"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/IMGDesc"
                android:paddingLeft="7dp"
                android:paddingTop="7dp"
                android:paddingRight="7dp"
                android:paddingBottom="7dp"
                android:scaleType="fitCenter"
                android:tint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.66"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ISEN"
                app:srcCompat="@drawable/save" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_save"
                app:layout_constraintEnd_toEndOf="@+id/saveBTN"
                app:layout_constraintStart_toStartOf="@+id/saveBTN"
                app:layout_constraintTop_toBottomOf="@+id/saveBTN" />

            <ImageButton
                android:id="@+id/permissionBTN"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/IMGDesc"
                android:paddingLeft="7dp"
                android:paddingTop="7dp"
                android:paddingRight="7dp"
                android:paddingBottom="7dp"
                android:scaleType="fitCenter"
                android:tint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.33"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:srcCompat="@drawable/call" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_permission"
                app:layout_constraintEnd_toEndOf="@+id/permissionBTN"
                app:layout_constraintStart_toStartOf="@+id/permissionBTN"
                app:layout_constraintTop_toBottomOf="@+id/permissionBTN" />

            <ImageButton
                android:id="@+id/WSBTN"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/IMGDesc"
                android:paddingLeft="7dp"
                android:paddingTop="7dp"
                android:paddingRight="7dp"
                android:paddingBottom="7dp"
                android:scaleType="fitCenter"
                android:tint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.66"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:srcCompat="@drawable/download" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_webservice"
                app:layout_constraintEnd_toEndOf="@id/WSBTN"
                app:layout_constraintStart_toStartOf="@id/WSBTN"
                app:layout_constraintTop_toBottomOf="@id/WSBTN" />

            <Button
                android:id="@+id/LOGOUT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/LOGOUT"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>